{
    "name": "GopherFullInputActions",
    "maps": [
        {
            "name": "GopherControl",
            "id": "113e3e83-4e0f-44de-8e56-18a27ac14e63",
            "actions": [
                {
                    "name": "BaseMove",
                    "type": "Value",
                    "id": "b4141518-adef-4a8b-a957-8127f556df06",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftArmHome",
                    "type": "Button",
                    "id": "a58d5cb1-604d-47c3-89f3-de6b2dab655c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArmPreset",
                    "type": "Button",
                    "id": "dff11135-53ff-4f7a-b6ba-cf8ce05dd84c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArmMove",
                    "type": "Value",
                    "id": "d5db3063-10c6-42a4-80ad-c2b577ce39d7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftArmGrasp",
                    "type": "Button",
                    "id": "bbf69b83-370c-4e76-9e31-d300f25fce82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArmSwitch",
                    "type": "Button",
                    "id": "8c92c0fe-f243-431b-86dc-ab672313f3a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArmHome",
                    "type": "Button",
                    "id": "0bc34f3a-fcd4-49aa-bedc-19272f9121e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArmPreset",
                    "type": "Button",
                    "id": "4c9efa58-b7a0-4d86-a695-bfa2840c3f30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArmMove",
                    "type": "Value",
                    "id": "8259540f-8f7d-43dd-9c2c-9f6a2d4e4fa7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArmGrasp",
                    "type": "Button",
                    "id": "b7cf5c03-7286-4dff-bfe3-b06aaa22ec86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArmSwitch",
                    "type": "Button",
                    "id": "ed5c5e07-3cbb-4ee7-a659-2e89a5ec225e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraToggle",
                    "type": "Button",
                    "id": "93132cf5-11bb-488b-b17a-466c3bf10258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "a445773c-a625-4d88-8133-e9bd1dc13a10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraHome",
                    "type": "Button",
                    "id": "43de98e3-3e64-4b18-8180-a11ba350d170",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChestTranslate",
                    "type": "Value",
                    "id": "d420d0ed-b421-4bd9-88ce-a50996ab3613",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArmTarget",
                    "type": "Button",
                    "id": "3688a812-9281-4682-a926-35bbe21eded3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "fe42fb8c-cc5d-44dc-80f8-0be1ea7c21a0",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArmMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a824b275-4b7a-45c5-b6f9-f121d0285bca",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "985446fb-9c6e-4c60-8a00-0578d049af7d",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74a95dc3-0890-4aa7-88dc-43ca3a46648c",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d932339d-3c64-4ff3-b817-96a679264235",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "f2fe6d39-d0cd-4cef-859e-e8059a3c5ef3",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "c6ba9f0d-99d4-481e-bd75-c828a30e8623",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "244e7a5a-d13a-43b8-bf60-3b105e18b5dd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1576e763-c4bd-47f4-8889-32a98f7cd168",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0dfa2b4-628e-4a64-80cd-b2c50b583663",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07385391-12a7-491c-ba46-27ca0075fb11",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e452c418-7b15-4608-b2b8-605b88b93a1f",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BaseMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "56ba315d-2c1c-4f5a-8dbb-88ca7de653a1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "7f3aa97d-439b-4daf-bc34-0e83031578c6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "9f9ce290-6fda-49ed-8e09-781b6f5c8e06",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "d4f00019-e396-41a8-8976-83a1881bf646",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "3D Vector",
                    "id": "4a1f3f61-75ec-4388-8129-5550b0e0e34a",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArmMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "34cd88ce-8fae-457a-b7a3-1bf48c905647",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "16f78d2a-005f-4c16-bb15-f11b9a715e87",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "acd8641e-0e6b-45e3-8262-70e9e9059393",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4fc2f5e4-9699-4484-9989-55db6d9f3411",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "e71330db-1cf8-40b9-a164-d976cdddf152",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "d2391dd1-33a3-486f-8477-ffa1d760e455",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "64e06d6d-ed64-4f1e-9685-675c8b7b5c7f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChestTranslate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "506fd791-be59-4510-935f-ed2fd478c19b",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChestTranslate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "68d8610f-3124-4338-97d6-9eaaf1063d66",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChestTranslate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "44787081-1cbe-45f9-bc57-cf6c0771ff84",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmGrasp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1d76076-6ca1-44b6-babf-dcc17fc90399",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmGrasp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9665e1d1-e404-48a8-b2b9-f8eacadbd47c",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "752a0cb9-f936-4473-9182-4117b99b63b7",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b934f63-3e85-47a4-9bb2-514d2a2af2db",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aba82c3d-0eb9-4d89-b55b-58b8fc7b50e4",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftArmPreset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "997abe01-27c0-4779-8437-e37d6b771289",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightArmPreset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8ada5ef-554b-4c45-aada-eec95a67c9cd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArmTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR Controller",
            "bindingGroup": "XR Controller",
            "devices": []
        }
    ]
}